# Super-Powered-Robot-Football

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  autoexec.cfg  beepgitmodules  build_release.py  client_cfg.ini  format.sh  game.sh  model_test.sh  physics.sh  server.sh  server_cfg.ini  server_config.ini  test.sh
ODE/GIMPACT/include/GIMPACT/: gim_geometry.h  gim_math.h  gim_tri_collision.h
ODE/GIMPACT/src/: gim_tri_tri_overlap.cpp  gim_trimesh.cpp
ODE/bindings/python/: ode.pyx
ODE/contrib/Ode.NET/Tests/: BoxStack.cs
ODE/drawstuff/src/: resource.h  resources.rc
ODE/ode/demo/: demo_motion.cpp
ODE/ode/src/: lcp.cpp  matrix.h  quickstep.cpp  step.cpp  threading_impl_posix.h  threadingutils.h
ODE/ode/src/joints/: pr.cpp  universal.cpp
ODE/ou/include/ou/: platform.h
assets/: ak47.blend  ak47.glb  script.lua  xbot1.glb  xbot2.glb  xbot_hands.glb  xbot_rigged2.glb
assets/editor/cfg/: init.cfg
assets/maps/: simple_map.json
assets/server/local/cfg/: init.cfg
assets/server/scripts/: on_load.lua
drivers/: animated_model_test.cpp  animation.hpp  crosshair.hpp  custom_mesh.hpp  editor.cpp  game.cpp  game_old.cpp  ik_test.cpp  imgui_test.cpp  lua_test.cpp  model_test.cpp  mouselook.hpp  physics.cpp  server.cpp  soloud_test.cpp  stress_test.cpp  test.cpp  test_thing.cpp  testing.hpp
enet/: Makefile  Makefile.in  config.status  configure  libenet.pc  libtool
enet/.deps/: callbacks.Plo  compress.Plo  host.Plo  list.Plo  packet.Plo  peer.Plo  protocol.Plo  unix.Plo
enet/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
ik/: CMakeLists.txt  ik_gen_vtable.py
ik/cmake/: build_number.txt
ik/include/vtables/: build_info_static.v  solver_base.v  tests_static.v
ode/: CHANGELOG.txt  CMakeLists.txt  Makefile  config.status  configure  configure.ac  libtool  ode-config  ode.pc
ode/GIMPACT/: Makefile
ode/GIMPACT/include/: Makefile
ode/GIMPACT/include/GIMPACT/: Makefile  gim_boxpruning.h  gim_contact.h  gim_geometry.h  gim_memory.h  gim_tri_capsule_collision.h  gim_trimesh.h  gimpact.h
ode/GIMPACT/src/: Makefile  gim_trimesh.cpp  gim_trimesh_ray_collision.cpp  gim_trimesh_trimesh_collision.cpp
ode/OPCODE/: Makefile
ode/OPCODE/.deps/: OPC_AABBCollider.Plo  OPC_AABBTree.Plo  OPC_BaseModel.Plo  OPC_Collider.Plo  OPC_Common.Plo  OPC_HybridModel.Plo  OPC_LSSCollider.Plo  OPC_MeshInterface.Plo  OPC_Model.Plo  OPC_OBBCollider.Plo  OPC_OptimizedTree.Plo  OPC_Picking.Plo  OPC_PlanesCollider.Plo  OPC_RayCollider.Plo  OPC_SphereCollider.Plo  OPC_TreeBuilders.Plo  OPC_TreeCollider.Plo  OPC_VolumeCollider.Plo  Opcode.Plo
ode/OPCODE/Ice/: Makefile
ode/OPCODE/Ice/.deps/: IceAABB.Plo  IceContainer.Plo  IceHPoint.Plo  IceIndexedTriangle.Plo  IceMatrix3x3.Plo  IceMatrix4x4.Plo  IceOBB.Plo  IcePlane.Plo  IcePoint.Plo  IceRandom.Plo  IceRay.Plo  (+4 more)
ode/drawstuff/: Makefile
ode/drawstuff/dstest/: Makefile  dstest
ode/drawstuff/src/: Makefile  drawstuff.cpp
ode/include/: Makefile
ode/include/drawstuff/: Makefile
ode/include/ode/: Makefile  objects.h
ode/libccd/: Makefile  config.status  libtool
ode/libccd/src/: Makefile  config.h
ode/ode/: Makefile
ode/ode/demo/: Makefile  demo_I  demo_basket  demo_boxstack  demo_buggy  demo_cards  demo_chain1  demo_chain2  demo_collision  demo_convex  demo_crash  demo_cyl  demo_cylvssphere  demo_dball  demo_dhinge  demo_feedback  demo_friction  demo_gyro2  demo_gyroscopic  demo_heightfield  demo_hinge  demo_jointPR  demo_jointPU  demo_joints  demo_kinematic  demo_motion  demo_motor  demo_moving_convex  demo_moving_trimesh  demo_ode  demo_ode.cpp  demo_piston  demo_plane2d  demo_rfriction  demo_slider  demo_space  demo_space_stress  demo_step  demo_tracks  demo_transmission  (+1 more)
ode/ode/doc/: Doxyfile  Makefile
ode/ode/src/: Makefile  collision_cylinder_trimesh.cpp  config.h  fastvecscale_impl.h  heightfield.cpp
ode/ou/: Makefile  config.status  libtool
ode/ou/test/: Makefile
ode/tests/: Makefile
ode/tests/UnitTest++/: Makefile
ode/tests/joints/: Makefile
raylib/: CMakeLists.txt
raylib-cpp/examples/audio/: audio_music_stream.cpp  audio_sound_loading.cpp
raylib-cpp/examples/core/: core_window_letterbox.cpp
raylib-cpp/examples/models/: models_first_person_maze.cpp
raylib-cpp/examples/multiple/: Player.cpp
raylib-cpp/examples/shapes/: shapes_logo_raylib.cpp
raylib-cpp/examples/text/: text_font_filters.cpp
raylib-cpp/include/: Camera3D.hpp  Color.hpp  Font.hpp  Functions.hpp  Image.hpp  Rectangle.hpp  Sound.hpp  Text.hpp  TextureUnmanaged.hpp  Vector2.hpp  Vector4.hpp  Window.hpp
raylib-cpp/projects/CMake/: main.cpp
raylib/src/: raudio.c  raylib.h  rcore.c  rmodels.c  rshapes.c  rtext.c  rtextures.c
src/: base.hpp  camera.hpp  console.hpp  custom_mesh.hpp  driver.cpp  ecs.hpp  engine.cpp  engine.hpp  game.cpp  game.hpp  lights.fs  lights.vs  log_manager.cpp  model.hpp  renderer.hpp  rss.c  rss.cpp  rss.hpp  shaders.hpp  shadow_map_texture.hpp  skybox.fs  skybox.vs  ui.hpp
src/ccd/: precision.h
src/editor/: editor_tools.cpp  editor_tools.hpp
src/engine/: allocator.cpp  base.hpp  camera.hpp  console.hpp  ecs.cpp  ecs.hpp  engine.cpp  engine.hpp  loading_screen.hpp  log_manager.cpp  log_manager.hpp  model.hpp  renderer.hpp  shader_sources.cpp  shaders.hpp  sound.hpp  ui.hpp
src/engine/shaders/: lights.vs
src/game/: camera.hpp  console.hpp  driver.cpp  renderer.hpp  shader_sources.cpp  shader_sources.hpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp  rlImGui.cpp  rlImGui.h  rlImGuiColors.h
src/mini/: ini.hpp
src/networking/: client.hpp  map.cpp  map.hpp  packet.hpp  player_body_base.hpp  player_stats.hpp  server.hpp  server_params.hpp  sim_params.hpp  simulation.hpp
src/ode/: version.h
src/odelib/ode/: config.h  ode.cpp  odeou.cpp  odeou.h
src/odelib/ou/: customization.cpp
src/ou/: atomic.h  namespace.h  platform.h
src/physics/: player_body.hpp  player_body_base.hpp  player_stats.hpp  raycast.cpp  raycast.hpp  simulation.hpp
src/scripting/: scripting.cpp  scripting.hpp
src/soloud/include/: soloud.h
(+156 files in other folders)
